syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

enum FissClaimStatus {
  CLAIM_STATUS_UNSET = 0;

  // ASCII Space
  CLAIM_STATUS_BLANK = 32;

  // ASCII A
  CLAIM_STATUS_ROUTING = 65;

  //ASCII S
  CLAIM_STATUS_SUSPEND = 83;

  // ASCII P
  CLAIM_STATUS_PAID = 80;

  // ASCII D
  CLAIM_STATUS_DENIED = 68;

  // ASCII I
  CLAIM_STATUS_INACTIVE = 73;

  // ASCII R
  CLAIM_STATUS_REJECT = 82;

  // ASCII T
  CLAIM_STATUS_RTP = 84;

  // ASCII M
  CLAIM_STATUS_MOVE = 77;
}
